--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
 <head>
-<title> Р“РѕСЃС‚РµРІР°СЏ Head First </title>
+<title> Гостевая Head First </title>
 </head>
+<body>
+<h1> Добро пожаловать в гостевую Head First</h1>
+</body>
 </html>
