--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<title> Гостевая Head First </title>
+<title>Р“РѕСЃС‚РµРІР°СЏ Head First </title>
 </head>
 <body>
-<h1> Добро пожаловать в гостевую Head First</h1>
+<h1> Р”РѕР±СЂРѕ РїРѕР¶Р°Р»РѕРІР°С‚СЊ РІ РіРѕСЃС‚РµРІСѓСЋ Head First</h1>
 </body>
 </html>
