--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<html>
+﻿<html>
 <head>
-<title>Head First </title>
+<title>Гостевая Head First </title>
 </head>
 <body>
-<h1>Head First</h1>
+<h1> Добро пожаловать в гостевую Head First</h1>
 </body>
 </html>
