--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 ﻿<html>
 <head>
-<title>Гостевая Head First </title>
+<title>Робототехника </title>
 </head>
 <body>
-<h1> Добро пожаловать в гостевую Head First</h1>
+<h1> Добро пожаловать в гостевую Head Robot First</h1>
+<img src = "FirstLesson01.jpg>
+<img src = "FirstLesson02.jpg>
 <img src = "drinks.gif">
 <img src = "6.quest.1.jpg">
 <h2> "https://evolkov.net/questions/" </h2>
