--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
 Правило «7W» (10-15 минут)
 Это правило очень наглядно выражено в фольклорных прибаутках. Например:
 
-— Куда, Фома, едешь?
-— Сено косить.
-— На что тебе сено?
-— Коровок кормить.
-— На что тебе коровы?
-— Молоко доить.
-— На что тебе молоко?
-— Ребяток поить.
-— На что ребятки?
-— Уму-разуму учить.
-— На что учить?
-— Чтоб на свете могли жить, людям пользу приносить.
+— Куда, Фома, едешь?//
+— Сено косить.//
+— На что тебе сено?//
+— Коровок кормить.//
+— На что тебе коровы?//
+— Молоко доить.//
+— На что тебе молоко?//
+— Ребяток поить.//
+— На что ребятки?//
+— Уму-разуму учить.//
+— На что учить?//
+— Чтоб на свете могли жить, людям пользу приносить.//
 На букву «W» в английском языке начинаются вопросительные слова «Зачем?» и «Почему?». Чтобы осознать причины проблемы, можно воспользоваться правилом «7W». Нужно семь раз сформулировать вопросы, начинающиеся с указанных слов. Я не гарантирую, что проблема тотчас решится, но цель своих действий вы осознаете максимально четко. Возьмите на вооружение этот прием и попробуйте применить его, например, в случае, когда к вам пришел друг и просит совета. Просто задавайте ему подобные вопросы — пусть отвечает. А когда вы будете озадачены очередной проблемой, задайте их самому (самой) себе. Поверьте, этот метод работает очень мощно и эффективно! Может случиться так, что проблема сразу решится сама собой. (77:)
 
 «Вопросительные слова» (15-20 минут)
@@ -46,29 +46,29 @@
 Запишите десять вопросительных слов, которые придут вам на ум.
 Задайте эти вопросы относительно своей проблемы.
 А теперь — ответьте на них. Вы сразу же поймёте направление, в котором нужно искать — там, где сложнее всего ответить.
-ЧТО ___________________________________________________________________?
+ЧТО ?
 
-КТО __________________________________________________________________?
+КТО ?
 
-ГДЕ ___________________________________________________________________?
+ГДЕ ?
 
-КАК ___________________________________________________________________?
+КАК ?
 
-КОГДА _________________________________________________________________?
+КОГДА ?
 
-ПОЧЕМУ _______________________________________________________________?
+ПОЧЕМУ ?
 
-ЗАЧЕМ _________________________________________________________________?
+ЗАЧЕМ ?
 
-ОТКУДА _______________________________________________________________?
+ОТКУДА ?
 
-КАКОЙ...? КАКАЯ ________________________________________________________?
+КАКОЙ...? КАКАЯ ?
 
-КАКАЯ ВЗАИМОСВЯЗЬ __________________________________________________?
+КАКАЯ ВЗАИМОСВЯЗЬ ?
 
-ПО КАКОЙ ПРИЧИНЕ ____________________________________________________?
+ПО КАКОЙ ПРИЧИНЕ ?
 
-ЧЕМ ЛУЧШЕ _____________________________________________________________?
+ЧЕМ ЛУЧШЕ ?
 </p>
 </body>
 </html>
