--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
 Правило «7W» (10-15 минут)
 Это правило очень наглядно выражено в фольклорных прибаутках. Например:
 
-— Куда, Фома, едешь?//
-— Сено косить.//
-— На что тебе сено?//
-— Коровок кормить.//
-— На что тебе коровы?//
-— Молоко доить.//
-— На что тебе молоко?//
-— Ребяток поить.//
-— На что ребятки?//
-— Уму-разуму учить.//
-— На что учить?//
-— Чтоб на свете могли жить, людям пользу приносить.//
+<p> — Куда, Фома, едешь?//
+</p><p>— Сено косить.//
+</p><p>— На что тебе сено?//
+</p><p>— Коровок кормить.//
+</p><p>— На что тебе коровы?//
+</p><p>— Молоко доить.//
+</p><p>— На что тебе молоко?//
+</p><p>— Ребяток поить.//
+</p><p>— На что ребятки?//
+</p><p>— Уму-разуму учить.//
+</p><p>— На что учить?//
+</p><p>— Чтоб на свете могли жить, людям пользу приносить.//
 На букву «W» в английском языке начинаются вопросительные слова «Зачем?» и «Почему?». Чтобы осознать причины проблемы, можно воспользоваться правилом «7W». Нужно семь раз сформулировать вопросы, начинающиеся с указанных слов. Я не гарантирую, что проблема тотчас решится, но цель своих действий вы осознаете максимально четко. Возьмите на вооружение этот прием и попробуйте применить его, например, в случае, когда к вам пришел друг и просит совета. Просто задавайте ему подобные вопросы — пусть отвечает. А когда вы будете озадачены очередной проблемой, задайте их самому (самой) себе. Поверьте, этот метод работает очень мощно и эффективно! Может случиться так, что проблема сразу решится сама собой. (77:)
 
 «Вопросительные слова» (15-20 минут)
@@ -46,21 +46,14 @@
 Запишите десять вопросительных слов, которые придут вам на ум.
 Задайте эти вопросы относительно своей проблемы.
 А теперь — ответьте на них. Вы сразу же поймёте направление, в котором нужно искать — там, где сложнее всего ответить.
-ЧТО ?
-
-КТО ?
-
-ГДЕ ?
-
-КАК ?
-
-КОГДА ?
-
-ПОЧЕМУ ?
-
-ЗАЧЕМ ?
-
-ОТКУДА ?
+<p>ЧТО?
+</p><p>КТО?
+</p><p>ГДЕ?
+</p><p>КАК?
+</p><p>КОГДА?
+</p><p>ПОЧЕМУ?
+</p><p>ЗАЧЕМ?
+</p><p>ОТКУДА?
 
 КАКОЙ...? КАКАЯ ?
 
