--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
 </head>
 <body>
 <h1> Добро пожаловать в гостевую Head Robot First</h1>
+Программа урока
+1.	Проверка светодиода  13 – GND. Используйте кнопку Reset.
+2.	Сознательное программирование светодиода. Включение на 13 пин. digitalWrite(13, 1);
+Подключение датчика освещенности 5V-GND-один из аналоговых портов(пинов);
+3.	Проверка датчика освещенности – получение с него чисел(0..1023) на экране;
+Setup - > Serial.begin(9600);
+Loop - > Serial.println(analogRead(A2));
+4.	Постановка в зависимость светодиода от датчика освещенности
+Если число 0..102 больше или меньше какого-то значения(когда чужой светодиод освещает датчик освещенности), то включить светодиод. Иначе выключить.
+5.	Подбор оптимальной длины проводов для светодиода и датчика освещенности с целью дотянуться до соседа.
 
+  
+  
 Существует шесть типов вопросов.
 Для того чтобы вы лучше поняли, как они работают на практике, рассмотрим их на примере. Допустим, перед вами стоит проблема — купить монитор для компьютера. Вы располагаете ограниченной суммой денег, но хотите, чтобы монитор был таким, чтобы вы, работая на нем, не испортили себе зрение.
 
