--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
  <li> Проверка светодиода  13 – GND. Используйте кнопку Reset.</li>
  <li> Сознательное программирование светодиода. Включение на 13 пин. digitalWrite(13, 1); </li>
 <li> Проверка датчика освещенности – получение с него чисел(0..1023) на экране;
-Setup - > Serial.begin(9600);
-Loop - > Serial.println(analogRead(A2));</li>
+<p>Setup - > Serial.begin(9600);</p>
+<p> Loop - > Serial.println(analogRead(A2));</p> </li>
   <li> Подключение датчика освещенности 5V-GND-один из аналоговых портов(пинов);</li>
  <li> Постановка в зависимость светодиода от датчика освещенности
 Если число 0..102 больше или меньше какого-то значения(когда чужой светодиод освещает датчик освещенности), то включить светодиод. Иначе выключить. </li>
