--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 Программа урока
 <ol>
  <li> Проверка светодиода  13 – GND. Используйте кнопку Reset.</li>
- <li> Сознательное программирование светодиода. Включение на 13 пин. digitalWrite(13, 1); </li>
+ <li> Сознательное программирование светодиода. Включение на 12 пин. digitalWrite(12, 1); </li>
+ <li> Если светодиод тускло горит:</li>
+ <p>Setup - > pinMode(12, OUTPUT);</p>
 <li> Проверка датчика освещенности – получение с него чисел(0..1023) на экране;
 <p>Setup - > Serial.begin(9600);</p>
 <p> Loop - > Serial.println(analogRead(A2));</p> </li>
