--- a/index.html
+++ b/index.html
@@ -3,7 +3,32 @@
 <title>Робототехника </title>
 </head>
 <body>
-<h1> Добро пожаловать в гостевую Head Robot First</h1>
+    <p1> RoboProjects</p1>
+        <p style="text-align: center;"><img alt="" src="PC131071.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131072.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131073.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131074.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131075.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131076.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131077.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131078.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131079.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131080.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131081.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131082.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131083.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131084.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131085.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131086.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131087.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131088.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131089.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131090.JPG" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="PC131091.JPG" style="width: 60%;" /></p>
+        </body>
+ 
+ 
+ <h1> Добро пожаловать в гостевую Head Robot First</h1>
 Программа урока
 Программа урока
 <ol>
