--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <body>
     <p1> RoboProjects</p1>
     <p> https://www.oreilly.com/library/view/head-first-html/059610197X/ </p>
+        <p style="text-align: center;"><img alt="" src="N211220_Theatre02.jpg" style="width: 60%;" /></p>
+        <p style="text-align: center;"><img alt="" src="N211220_Theatre01.jpg" style="width: 60%;" /></p>
         <p style="text-align: center;"><img alt="" src="PC131071.JPG" style="width: 60%;" /></p>
         <p style="text-align: center;"><img alt="" src="PC131072.JPG" style="width: 60%;" /></p>
         <p style="text-align: center;"><img alt="" src="PC131073.JPG" style="width: 60%;" /></p>
