--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
     <p1> RoboProjects</p1>
     <p> https://www.oreilly.com/library/view/head-first-html/059610197X/ </p>
-    <p style="text-align: center;"> <iframe src="word1.pdf" width:60%></iframe></p>
+    <p style="text-align: center;"> <iframe src="word1.pdf" width="1200" height="800"></iframe></p>
 
         <p style="text-align: center;"><img alt="" src="N211220_Theatre01.jpg" style="width: 80%;" /></p>
         <p style="text-align: center;"><img alt="" src="N211220_Theatre02.jpg" style="width: 80%;" /></p>
