--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 </head>
 <body>
     <p1> RoboProjects</p1>
+            <p style="text-align: center;"><img alt="" src="Zima1.jpg" style="width: 80%;" /></p>
+        <p style="text-align: center;"><img alt="" src="Zima2.jpg" style="width: 80%;" /></p>
+
     <p> https://www.oreilly.com/library/view/head-first-html/059610197X/ </p>
     <p style="text-align: center;"> <iframe src="word1.pdf" width="1200" height="800"></iframe></p>
 
