--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 </head>
 <body>
     <p1> RoboProjects</p1>
-            <p style="text-align: center;"><img alt="" src="Zima1.jpg" style="width: 80%;" /></p>
+       <p style="text-align: center;"><img alt="" src="Cir1.jpg" style="width: 80%;" /></p>  
+    <p style="text-align: center;"><img alt="" src="Cir2.jpg" style="width: 80%;" /></p>        
+    
+    <p style="text-align: center;"><img alt="" src="Zima1.jpg" style="width: 80%;" /></p>
         <p style="text-align: center;"><img alt="" src="Zima2.jpg" style="width: 80%;" /></p>
 
     <p> https://www.oreilly.com/library/view/head-first-html/059610197X/ </p>
