--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 </head>
 <body>
     <p1> RoboProjects</p1>
-       <p style="text-align: center;"><img alt="" src="Cir1.jpg" style="width: 80%;" /></p>  
+     <p style="text-align: center;"><img alt="" src="Circuit1.jpg" style="width: 80%;" /></p> 
+     <p style="text-align: center;"><img alt="" src="Circuit2.jpg" style="width: 80%;" /></p> 
+     <p style="text-align: center;"><img alt="" src="Circuit3.jpg" style="width: 80%;" /></p> 
+    <p style="text-align: center;"><img alt="" src="Cir1.jpg" style="width: 80%;" /></p>  
+    
     <p style="text-align: center;"><img alt="" src="Cir2.jpg" style="width: 80%;" /></p>        
     
     <p style="text-align: center;"><img alt="" src="Zima1.jpg" style="width: 80%;" /></p>
