--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 ﻿<html>
 <head>
+<p style="text-align: center;"> <iframe src="Recording_20231008_2036.mht" width="1200" height="800"></iframe></p>
+    
+
+
+    
 
     <p>0. Ирина Абакумова <br />&laquo;Спит ковыль&raquo;<br />1. Андрей Юзефов<br />&laquo;Душа грустит о небесах&raquo; (стихи)</p>
 <p>2. Людмила Новикова<br />&laquo;Закружилась листва золотая&raquo; (стихи)</p>
