--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ﻿<html>
 <head>
-<p style="text-align: center;"> <iframe src="Recording_20231008_2036.mht" width="1200" height="800"></iframe></p>
-    
+<p style="text-align: center;"> <iframe src="1.pdf" width="1200" height="800"></iframe></p>    
 
 
     
