--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ﻿<html>
 <head>
 <p style="text-align: center;"> <iframe src="1.pdf" width="1200" height="800"></iframe></p>    
+<p style="text-align: center;"> <iframe src="2.pdf" width="1200" height="800"></iframe></p>    
+<p style="text-align: center;"> <iframe src="3.pdf" width="1200" height="800"></iframe></p>    
+<p style="text-align: center;"> <iframe src="4.pdf" width="1200" height="800"></iframe></p>    
 
 
     
