Добавил ссылку в самое начало

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<html>
 <head>
+   <title>https://youtu.be/Qp7dU9svL8s </title> 
         <p style="text-align: center;"> <iframe src="00.PDF" width="1200" height="800"></iframe></p>  
 
     <p style="text-align: center;"> <iframe src="0.pdf" width="1200" height="800"></iframe></p>  
