--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ﻿<html>
 <head>
-   https://youtu.be/Qp7dU9svL8s
+   https://youtu.be/Qp7dU9svL8s - OnShape SpongeBob SquarePants
+   https://www.youtube.com/watch?v=EPLTttMf4bI - TinkerCad 3D Основы
    <p style="text-align: center;"> <iframe src="Колонна.PDF" width="1200" height="800"></iframe></p>
         <p style="text-align: center;"> <iframe src="00.PDF" width="1200" height="800"></iframe></p>
 
