--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ﻿<html>
 <head>
-   https://youtu.be/Qp7dU9svL8s - OnShape SpongeBob SquarePants
-   https://www.youtube.com/watch?v=EPLTttMf4bI - TinkerCad 3D Основы
-   https://www.youtube.com/watch?v=EbxfbJJ2kZM - TinkerCad 3D Машина. Точные размеры
+  <li> https://youtu.be/Qp7dU9svL8s - OnShape SpongeBob SquarePants  </li>
+    <li> https://www.youtube.com/watch?v=EPLTttMf4bI - TinkerCad 3D Основы  </li>
+    <li> https://www.youtube.com/watch?v=EbxfbJJ2kZM - TinkerCad 3D Машина. Точные размеры  </li>
    <p style="text-align: center;"> <iframe src="Колонна.PDF" width="1200" height="800"></iframe></p>
         <p style="text-align: center;"> <iframe src="00.PDF" width="1200" height="800"></iframe></p>
 
