--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ﻿<html>
 <head>
-   https://www.tinkercad.com/joinclass/1TXK68BXC
-   https://www.tinkercad.com/joinclass/IGWQ5AF7L 8class
+   <a href=">https://www.tinkercad.com/joinclass/1TXK68BXC">>https://www.tinkercad.com/joinclass/1TXK68BXC</a></p>
+   <a href="https://www.tinkercad.com/joinclass/IGWQ5AF7L">https://www.tinkercad.com/joinclass/IGWQ5AF7L</a></p>
+
 
 <p><a href="https://www.youtube.com/watch?v=EPLTttMf4bI">TinkerCad 3D Основы</a></p>
 <p><a href="https://www.youtube.com/watch?v=EbxfbJJ2kZM">TinkerCad 3D Машина. Точные размеры</a></p>
