--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<html>
 <head>
-   <a href=">https://www.tinkercad.com/joinclass/1TXK68BXC">>https://www.tinkercad.com/joinclass/1TXK68BXC</a></p>
+   <a href="https://www.tinkercad.com/joinclass/1TXK68BXC">https://www.tinkercad.com/joinclass/1TXK68BXC</a></p>
 
 
 <p><a href="https://www.youtube.com/watch?v=EPLTttMf4bI">TinkerCad 3D Основы</a></p>
