--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ﻿<html>
 <head>
+    <a href="https://www.tinkercad.com/joinclass/Q38S11KK6">https://www.tinkercad.com/joinclass/Q38S11KK6</a></p> 7И
+
   <a href="https://www.tinkercad.com/joinclass/AZPU63AKR">https://www.tinkercad.com/joinclass/AZPU63AKR</a></p> 7И
 
 
