--- a/index.html
+++ b/index.html
@@ -1,22 +1,15 @@
 ﻿<html>
 <head>
-    <a href="https://www.tinkercad.com/joinclass/Q38S11KK6">https://www.tinkercad.com/joinclass/Q38S11KK6</a></p> 7И
-
-  <a href="https://www.tinkercad.com/joinclass/AZPU63AKR">https://www.tinkercad.com/joinclass/AZPU63AKR</a></p> 7И
-
-
-
-
-
+<a href="https://www.tinkercad.com/joinclass/Q38S11KK6">ИТ-Вертикаль</a></p>
+<a href="https://www.tinkercad.com/joinclass/AZPU63AKR">Моделирование. Информатика</a></p>
 <p><a href="https://www.youtube.com/watch?v=EPLTttMf4bI">TinkerCad 3D Основы</a></p>
 <p><a href="https://www.youtube.com/watch?v=EbxfbJJ2kZM">TinkerCad 3D Машина. Точные размеры</a></p>
-   <p><a href="https://youtu.be/Qp7dU9svL8s">OnShape SpongeBob SquarePants</a></p>
-      <a href="https://www.tinkercad.com/joinclass/IGWQ5AF7L">https://www.tinkercad.com/joinclass/IGWQ5AF7L</a></p>
-   <a href="https://www.tinkercad.com/joinclass/1TXK68BXC">https://www.tinkercad.com/joinclass/1TXK68BXC</a></p> 7K
-   <p style="text-align: center;"> <iframe src="Колонна.PDF" width="1200" height="800"></iframe></p>
-        <p style="text-align: center;"> <iframe src="00.PDF" width="1200" height="800"></iframe></p>
-
-    <p style="text-align: center;"> <iframe src="0.pdf" width="1200" height="800"></iframe></p>
+<p><a href="https://youtu.be/Qp7dU9svL8s">OnShape SpongeBob SquarePants</a></p>
+<a href="https://www.tinkercad.com/joinclass/IGWQ5AF7L">Робототехника 2 год</a></p>
+<a href="https://www.tinkercad.com/joinclass/1TXK68BXC">Робототехника 1 год</a></p>
+<p style="text-align: center;"> <iframe src="Колонна.PDF" width="1200" height="800"></iframe></p>
+<p style="text-align: center;"> <iframe src="00.PDF" width="1200" height="800"></iframe></p>
+<p style="text-align: center;"> <iframe src="0.pdf" width="1200" height="800"></iframe></p>
 <p style="text-align: center;"> <iframe src="1.pdf" width="1200" height="800"></iframe></p>
 <p style="text-align: center;"> <iframe src="2.pdf" width="1200" height="800"></iframe></p>
 <p style="text-align: center;"> <iframe src="3.pdf" width="1200" height="800"></iframe></p>
