--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <a href="https://www.tinkercad.com/joinclass/AZPU63AKR">Моделирование. Информатика</a></p>
 <p><a href="https://www.youtube.com/watch?v=EPLTttMf4bI">TinkerCad 3D Основы</a></p>
 <p><a href="https://www.youtube.com/watch?v=EbxfbJJ2kZM">TinkerCad 3D Машина. Точные размеры</a></p>
-<p><a href="https://youtu.be/Qp7dU9svL8s">OnShape SpongeBob SquarePants</a></p>
+<p><a href="https://youtu.be/O-BFssA5cjg">OnShape SpongeBob SquarePants HQ</a></p>
 <a href="https://www.tinkercad.com/joinclass/IGWQ5AF7L">Робототехника 2 год</a></p>
 <a href="https://www.tinkercad.com/joinclass/1TXK68BXC">Робототехника 1 год</a></p>
 <p style="text-align: center;"> <iframe src="Колонна.PDF" width="1200" height="800"></iframe></p>
