--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <a href="https://www.tinkercad.com/joinclass/AZPU63AKR">Моделирование. Информатика</a></p>
 <p><a href="https://www.youtube.com/watch?v=EPLTttMf4bI">TinkerCad 3D Основы</a></p>
 <p><a href="https://www.youtube.com/watch?v=EbxfbJJ2kZM">TinkerCad 3D Машина. Точные размеры</a></p>
+ <p><a href="https://www.youtube.com/watch?v=wkALThFHIO4">TinkerCAD - TinkerCad 3D. Генераторы форм, трюки и 3D-печать</a></p>
+   
 <p><a href="https://youtu.be/O-BFssA5cjg">OnShape SpongeBob SquarePants HQ</a></p>
 <a href="https://www.tinkercad.com/joinclass/IGWQ5AF7L">Робототехника 2 год</a></p>
 
