--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<html>
 <head>
+<a href="https://sites.google.com/view/electronikaosnova/%D0%B3%D0%BB%D0%B0%D0%B2%D0%BD%D0%B0%D1%8F-%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D0%B0/001-%D1%81%D1%85%D0%B5%D0%BC%D0%B0?authuser=0">Электрические цепи</a></p>
 <a href="https://www.tinkercad.com/joinclass/1TXK68BXC">Робототехника 1 год</a></p>
 <p><a href="https://www.youtube.com/watch?v=EPLTttMf4bI">TinkerCad 3D Основы</a></p>
 <p><a href="https://www.youtube.com/watch?v=EbxfbJJ2kZM">TinkerCad 3D Машина. Точные размеры</a></p>
