--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <p><a href="https://www.youtube.com/watch?v=EbxfbJJ2kZM">TinkerCad 3D Машина. Точные размеры</a></p>
 <p><a href="https://www.youtube.com/watch?v=wkALThFHIO4">TinkerCAD - TinkerCad 3D. Генераторы форм, трюки и 3D-печать</a></p>
  <a href="https://disk.yandex.ru/d/VupdSKF_oZfDyw/%D0%A2%D1%80%D0%B5%D0%BA%20%22%D0%A0%D0%BE%D0%B1%D0%BE%D1%82%D0%BE%D1%82%D0%B5%D1%85%D0%BD%D0%B8%D0%BA%D0%B0%22">ИТ-Вертикаль ИТ-марафон </a></p>
+ <p><a href="https://examen-technolab.ru/manuals/tv-0441-m-1.pdf">Операторы условия на странице 36</a></p>
+<p><a href="https://examen-technolab.ru/manuals/tv-0441-m-1.pdf">Функции на страницу 39</a></p>
+
 <a href="https://www.tinkercad.com/joinclass/Q38S11KK6">ИТ-Вертикаль</a></p>
 <a href="https://www.tinkercad.com/joinclass/AZPU63AKR">Моделирование. Информатика</a></p>
 
