--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 <p><a href="https://youtu.be/O-BFssA5cjg">OnShape SpongeBob SquarePants HQ</a></p>
 <a href="https://www.tinkercad.com/joinclass/IGWQ5AF7L">Робототехника 2 год</a></p>
 
-<p style="text-align: center;"> <iframe src="Колонна.PDF" width="1200" height="800"></iframe></p>
+<p style="text-align: center;"> <iframe src="Корабельная пушка_compressed.pdf" width="1200" height="800"></iframe></p>
+ <p style="text-align: center;"> <iframe src="Кинжал_compressed.pdf" width="1200" height="800"></iframe></p>
+  <p style="text-align: center;"> <iframe src="Булава.pdf" width="1200" height="800"></iframe></p>
+ <p style="text-align: center;"> <iframe src="Колонна.PDF" width="1200" height="800"></iframe></p>
 <p style="text-align: center;"> <iframe src="00.PDF" width="1200" height="800"></iframe></p>
 <p style="text-align: center;"> <iframe src="0.pdf" width="1200" height="800"></iframe></p>
 <p style="text-align: center;"> <iframe src="1.pdf" width="1200" height="800"></iframe></p>
