--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
  <a href=" https://github.com/deka552/deka552.github.io/blob/master/%D0%A2%D0%B0%D0%B1%D0%BB%D0%B5%D1%82%D0%BD%D0%B8%D1%86%D0%B0%D0%90%D1%80%D1%85%D0%B8%D0%B2.zip
 ">Archive </a></p>
 
-<a href="https://www.youtube.com/watch?v=NheyBvBaVIw&t=1351s">Scratch_1  Анимация. Видео. Аквариум</a></p>
-<a href="https://www.youtube.com/watch?v=rkwGkko_LSU&t=789s">Scratch_1 Анимация. Видео. Кот и мышь</a></p>
 
+<a href="https://www.youtube.com/watch?v=NheyBvBaVIw&t=1351s">Scratch_1  Анимация. Видео. Аквариум</a></p> 
+<a href="https://www.youtube.com/watch?v=rkwGkko_LSU&t=789s">Scratch_2 Анимация. Видео. Кот и мышь</a></p>
 <a href="https://robotlandia.ru/abc5/0101.htm?ysclid=ls7q2fey9z789414806">Scratch_1 Почитать обо всём по порядку</a></p>
+ <a href="https://www.youtube.com/watch?v=rzdeQ70sReU&t=207s">Scratch_3 Cоздаем Тест в</a></p>
 
 <a href="https://sites.google.com/view/electronikaosnova/%D0%B3%D0%BB%D0%B0%D0%B2%D0%BD%D0%B0%D1%8F-%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D0%B0/001-%D1%81%D1%85%D0%B5%D0%BC%D0%B0?authuser=0">Электрические цепи</a></p>
 <a href="https://www.tinkercad.com/joinclass/1TXK68BXC">Робототехника 1 год</a></p>
