--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ﻿<html>
 <head>
+ <a href=" https://skillbox.kg/upload/setka_images/15054015062023_d75dd4921f9f5ca9dc828e1efafbd5a21dfa9c5d.jpg"> Векторная, символ для inkScape </a></p>
+
 <a href=" https://youtu.be/Kuf39OnBm3U"> Scratch + векторная + растровая графика </a></p>
 
  <a href=" https://drive.google.com/file/d/1AbcarfayeaNFsJ0EQJ-UaQb6yRWJk0DO/view"> Fusion360 уроки Станкин</a></p>
