--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ﻿<html>
 <head>
- <a href=" https://skillbox.kg/upload/setka_images/15054015062023_d75dd4921f9f5ca9dc828e1efafbd5a21dfa9c5d.jpg"> Векторная, символ для inkScape </a></p>
+ <a href=" https://skillbox.kg/upload/setka_images/15054015062023_d75dd4921f9f5ca9dc828e1efafbd5a21dfa9c5d.jpg"> Векторная графика, символ для inkScape </a></p>
+ <a href="https://miro.com/app/board/uXjVKf3agoQ=/"> Доска Миро </a></p>
 
 <a href=" https://youtu.be/Kuf39OnBm3U"> Scratch + векторная + растровая графика </a></p>
 
