--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ﻿<html>
 <head>
- <p style="text-align: center;"> <iframe src="Лыжный спорт 1988.pdf" width="1200" height="800"></iframe></p>
+
+ <a href=" https://drive.google.com/file/d/1NP985woy0_kiqB1r8dSEfMgG3ufRZrbe/view?usp=sharing"> Капланов. Лыжный спорт. Для Excel/Calc  </a></p>
 
  <a href=" https://skillbox.kg/upload/setka_images/15054015062023_d75dd4921f9f5ca9dc828e1efafbd5a21dfa9c5d.jpg"> Векторная графика, символ для inkScape </a></p>
  <a href="https://miro.com/app/board/uXjVKf3agoQ=/"> Доска Миро </a></p>
