--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<html>
 <head>
+ <a href="  https://practicum.yandex.ru/blog/kak-rabotat-s-formulami-v-excel/"> Как работать с формулами. Для Excel/Calc  </a></p>
 
  <a href=" https://drive.google.com/file/d/1NP985woy0_kiqB1r8dSEfMgG3ufRZrbe/view?usp=sharing"> Капланов. Лыжный спорт. Для Excel/Calc  </a></p>
 
