--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ﻿<html>
 <head>
+ <p style="text-align: center;"> <iframe src="1star1.jpg" width="1200" height="800"></iframe></p>
+<p style="text-align: center;"> <iframe src="1star2.jpg" width="1200" height="800"></iframe></p>
+
  <a href="  https://practicum.yandex.ru/blog/kak-rabotat-s-formulami-v-excel/"> Как работать с формулами. Для Excel/Calc  </a></p>
 
  <a href=" https://drive.google.com/file/d/1NP985woy0_kiqB1r8dSEfMgG3ufRZrbe/view?usp=sharing"> Капланов. Лыжный спорт. Для Excel/Calc  </a></p>
