--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ﻿<html>
 <head>
+ <a href="  https://practicum.yandex.ru/blog/kak-rabotat-s-formulami-v-excel/"> Как работать с формулами. Для Excel/Calc  </a></p>
 
+ <a href=" https://practicum.yandex.ru/excel-for-work-full/"> Курс «Excel для работы»  Для Excel/Calc  </a></p>
 
  <a href="  https://practicum.yandex.ru/blog/kak-rabotat-s-formulami-v-excel/"> Как работать с формулами. Для Excel/Calc  </a></p>
 
