--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ﻿<html>
 <head>
+  <a href="   https://youtube.com/live/DRikJ7USbOg?feature=share"> Youtube  </a></p>
+
  <a href="  https://practicum.yandex.ru/blog/kak-rabotat-s-formulami-v-excel/"> Как работать с формулами. Для Excel/Calc  </a></p>
  <a href=" https://disk.yandex.ru/i/qMQBMi8rb008Qw"> ПРимер общей таблицы Yandex.docs Для Excel/Calc  </a></p>
 
