--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
 
 <p><a href=" https://youtu.be/Dtyhel8dF58">Клинок М.Ю. Лермонтова</a></p>   
 <p><a href="https://youtu.be/O-BFssA5cjg">OnShape SpongeBob SquarePants HQ</a></p>
+<p><a href="  https://music.youtube.com/watch?v=pdtRqSwJNeM&list=PLkcbE8hjKm6_LGW6JZmnEradNU8KCevJN">Медленный вальс</a></p>
+  
 <a href="https://www.tinkercad.com/joinclass/IGWQ5AF7L">Робототехника 2 год</a></p>
 
+
+  
 <p style="text-align: center;"> <iframe src="Корабельная пушка_compressed.pdf" width="1200" height="800"></iframe></p>
  <p style="text-align: center;"> <iframe src="Кинжал_compressed.pdf" width="1200" height="800"></iframe></p>
   <p style="text-align: center;"> <iframe src="Булава.pdf" width="1200" height="800"></iframe></p>
