--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ﻿<html>
 <head>
   <a href="   https://www.youtube.com/channel/UCfVjHsSEkKynkVT8hOwbDEQ"> Youtube  </a></p>
+    <a href="   https://disk.yandex.ru/edit/disk/disk%2F%D0%97%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D1%8F%2014.04..xlsx?source=docs"> Двоичная система счисления  </a></p>
+
 
  <a href="  https://practicum.yandex.ru/blog/kak-rabotat-s-formulami-v-excel/"> Как работать с формулами. Для Excel/Calc  </a></p>
  <a href=" https://disk.yandex.ru/i/qMQBMi8rb008Qw"> ПРимер общей таблицы Yandex.docs Для Excel/Calc  </a></p>
