--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 <a href=" https://youtu.be/Kuf39OnBm3U"> Scratch + векторная + растровая графика </a></p>
 
  <a href=" https://drive.google.com/file/d/1AbcarfayeaNFsJ0EQJ-UaQb6yRWJk0DO/view"> Fusion360 уроки Станкин</a></p>
+       <a href=" https://github.com/deka552/deka552.github.io/blob/master/%D0%9B%D0%A6%D0%9C%D0%9A.160.30.00.00%20%D0%A1%D0%91%20%D0%A2%D1%8D%D0%BD.zip
+">Archive 2 </a></p>
  <a href=" https://github.com/deka552/deka552.github.io/blob/master/%D0%A2%D0%B0%D0%B1%D0%BB%D0%B5%D1%82%D0%BD%D0%B8%D1%86%D0%B0%D0%90%D1%80%D1%85%D0%B8%D0%B2.zip
 ">Archive </a></p>
 
