--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 ﻿<html>
 <head>
+       <a href="   https://youtube.com/live/TNYXFjKXmNc?feature=share"> Youtube OnShape Cборки  </a></p>
       <a href="     https://www.youtube.com/watch?v=UdXGC9XNM_w"> Animation  </a></p>
 
 
   <a href="   https://www.youtube.com/channel/UCfVjHsSEkKynkVT8hOwbDEQ"> Youtube  </a></p>
+        <a href="  https://www.youtube.com/watch?v=Ud_hQLWsa9A&t=61s"> Как взять ссылку на трансляцию  </a></p>
+
     <a href="   https://disk.yandex.ru/edit/disk/disk%2F%D0%97%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D1%8F%2014.04..xlsx?source=docs"> Двоичная система счисления  </a></p>
 
 
