--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ﻿<html>
 <head>
+              <a href="   https://docs.google.com/spreadsheets/d/1wd3XROFp8qklzj8UzWpPAZiSmN4cvS9OnB3D1Cto5_E/edit#gid=1486065593"> Excel документ  </a></p>
+
        <a href="   https://youtube.com/live/TNYXFjKXmNc?feature=share"> Youtube OnShape Cборки  </a></p>
       <a href="     https://www.youtube.com/watch?v=UdXGC9XNM_w"> Animation  </a></p>
 
